--- a/index.ipynb
+++ b/index.ipynb
@@ -62,6 +62,7 @@
    },
    "outputs": [],
    "source": [
+    "traveller = \n",
     "def meet_traveller(): \n",
     "    welcome_message = \"Hi \" + traveller.title() + \", I'm so glad we'll be going on the trip together!\"\n",
     "    return welcome_message # return statement"
